[package]
name = "dbv"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = "0.26.2"
